[Cairo] Incorrect dashed and dotted border painting after r177686. https://bugs.webkit.org/show_bug.cgi?id=141967

Reviewed by Gyuyoung Kim.

Fix the incorrect dashed/dotted border painting in cairo.

Source/WebCore:

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::drawLine):
(WebCore::calculateStrokePatternOffset): Deleted.
(WebCore::drawLineOnCairoContext): Deleted.

LayoutTests:

* platform/gtk/TestExpectations: Removed the passed test.


Canonical link: https://commits.webkit.org/168771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191658 268f45cc-cd09-0410-ab3c-d52691b4dbfc